--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -3,7 +3,7 @@
 <body>
 
 <div class="container">
-    <form action="/member/new" method="post">
+    <form action="/members/new" method="post">
         <div class="form-group">
             <label for="name">이름</label>
             <!-- name="name"은 자바 코드 변수와 일치 시킨다 -->
